Minor changes to syntax

--- a/Block2/notebooks/02_slicing_dicing_filtering.ipynb
+++ b/Block2/notebooks/02_slicing_dicing_filtering.ipynb
@@ -11380,12 +11380,13 @@
    "id": "2e1e4818",
    "metadata": {},
    "source": [
-    "## 💡 New Column: high_fare\n",
+    "## New Column: high_fare\n",
     "\n",
     "The `high_fare` column helps distinguish passengers who paid **above-median ticket prices**.  \n",
     "This makes it easy to compare survival rates, passenger class, or gender breakdowns between higher-paying and lower-paying groups.  \n",
     "\n",
     "For example, I can now explore:\n",
+    "\n",
     "- Were high-fare passengers more likely to survive?\n",
     "- Does `high_fare` correlate with 1st class tickets?\n",
     "- Are certain embarkation points more common among high-fare passengers?"
