Trained Decision Tree classifier on Titanic data; evaluated with accuracy, precision, and recall

--- a/block3_intro_to_ml/classification_titanic.ipynb
+++ b/block3_intro_to_ml/classification_titanic.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9c71a8e9",
    "metadata": {},
    "outputs": [],
@@ -30,98 +30,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "175e392c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape: (891, 12)\n",
-      "\n",
-      "Columns:\n",
-      "['PassengerId', 'Survived', 'Pclass', 'Name', 'Sex', 'Age', 'SibSp', 'Parch', 'Ticket', 'Fare', 'Cabin', 'Embarked']\n",
-      "\n",
-      "Top rows:\n",
-      "   PassengerId  Survived  Pclass  \\\n",
-      "0            1         0       3   \n",
-      "1            2         1       1   \n",
-      "2            3         1       3   \n",
-      "3            4         1       1   \n",
-      "4            5         0       3   \n",
-      "\n",
-      "                                                Name     Sex   Age  SibSp  \\\n",
-      "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
-      "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
-      "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
-      "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
-      "4                           Allen, Mr. William Henry    male  35.0      0   \n",
-      "\n",
-      "   Parch            Ticket     Fare Cabin Embarked  \n",
-      "0      0         A/5 21171   7.2500   NaN        S  \n",
-      "1      0          PC 17599  71.2833   C85        C  \n",
-      "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
-      "3      0            113803  53.1000  C123        S  \n",
-      "4      0            373450   8.0500   NaN        S  \n",
-      "\n",
-      "Summary statistics:\n",
-      "        PassengerId    Survived      Pclass                     Name   Sex  \\\n",
-      "count    891.000000  891.000000  891.000000                      891   891   \n",
-      "unique          NaN         NaN         NaN                      891     2   \n",
-      "top             NaN         NaN         NaN  Braund, Mr. Owen Harris  male   \n",
-      "freq            NaN         NaN         NaN                        1   577   \n",
-      "mean     446.000000    0.383838    2.308642                      NaN   NaN   \n",
-      "std      257.353842    0.486592    0.836071                      NaN   NaN   \n",
-      "min        1.000000    0.000000    1.000000                      NaN   NaN   \n",
-      "25%      223.500000    0.000000    2.000000                      NaN   NaN   \n",
-      "50%      446.000000    0.000000    3.000000                      NaN   NaN   \n",
-      "75%      668.500000    1.000000    3.000000                      NaN   NaN   \n",
-      "max      891.000000    1.000000    3.000000                      NaN   NaN   \n",
-      "\n",
-      "               Age       SibSp       Parch  Ticket        Fare    Cabin  \\\n",
-      "count   714.000000  891.000000  891.000000     891  891.000000      204   \n",
-      "unique         NaN         NaN         NaN     681         NaN      147   \n",
-      "top            NaN         NaN         NaN  347082         NaN  B96 B98   \n",
-      "freq           NaN         NaN         NaN       7         NaN        4   \n",
-      "mean     29.699118    0.523008    0.381594     NaN   32.204208      NaN   \n",
-      "std      14.526497    1.102743    0.806057     NaN   49.693429      NaN   \n",
-      "min       0.420000    0.000000    0.000000     NaN    0.000000      NaN   \n",
-      "25%      20.125000    0.000000    0.000000     NaN    7.910400      NaN   \n",
-      "50%      28.000000    0.000000    0.000000     NaN   14.454200      NaN   \n",
-      "75%      38.000000    1.000000    0.000000     NaN   31.000000      NaN   \n",
-      "max      80.000000    8.000000    6.000000     NaN  512.329200      NaN   \n",
-      "\n",
-      "       Embarked  \n",
-      "count       889  \n",
-      "unique        3  \n",
-      "top           S  \n",
-      "freq        644  \n",
-      "mean        NaN  \n",
-      "std         NaN  \n",
-      "min         NaN  \n",
-      "25%         NaN  \n",
-      "50%         NaN  \n",
-      "75%         NaN  \n",
-      "max         NaN  \n",
-      "\n",
-      "Missing values per column:\n",
-      "PassengerId      0\n",
-      "Survived         0\n",
-      "Pclass           0\n",
-      "Name             0\n",
-      "Sex              0\n",
-      "Age            177\n",
-      "SibSp            0\n",
-      "Parch            0\n",
-      "Ticket           0\n",
-      "Fare             0\n",
-      "Cabin          687\n",
-      "Embarked         2\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# View basic dataset shape\n",
     "print(\"Shape:\", titanic_data.shape)\n",
@@ -153,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "2fa7d488",
    "metadata": {},
    "outputs": [],
@@ -174,29 +86,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "2dbe9903",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   Pclass  Sex   Age  SibSp  Parch     Fare  Embarked\n",
-      "0       3    0  22.0      1      0   7.2500         0\n",
-      "1       1    1  38.0      1      0  71.2833         1\n",
-      "2       3    1  26.0      0      0   7.9250         0\n",
-      "3       1    1  35.0      1      0  53.1000         0\n",
-      "4       3    0  35.0      0      0   8.0500         0\n",
-      "0    0\n",
-      "1    1\n",
-      "2    1\n",
-      "3    1\n",
-      "4    0\n",
-      "Name: Survived, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define target and features\n",
     "y = titanic_data['Survived']\n",
@@ -210,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "a0ab1fcc",
    "metadata": {},
    "outputs": [],
@@ -232,6 +125,122 @@
     "- Encoded 'Sex' and 'Embarked' for modeling.\n",
     "- Selected 7 features to use in classification modeling tomorrow.\n",
     "- Dataset is clean and ready for training."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d60349d",
+   "metadata": {},
+   "source": [
+    "## Day 5 – Train/Test Split and Decision Tree Classification\n",
+    "\n",
+    "Today’s goal is to train a DecisionTreeClassifier to predict Titanic survival.  \n",
+    "We'll evaluate its accuracy and interpret the model using a confusion matrix, precision, and recall."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e030823",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, precision_score, recall_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "329b07e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titanic_data = pd.read_csv('data/titanic_cleaned.csv')\n",
+    "\n",
+    "y = titanic_data['Survived']\n",
+    "feature_names = ['Pclass', 'Sex', 'Age', 'SibSp', 'Parch', 'Fare', 'Embarked']\n",
+    "X = titanic_data[feature_names]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "157e49ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_X, val_X, train_y, val_y = train_test_split(X, y, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6030f9f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = DecisionTreeClassifier(random_state=1)\n",
+    "model.fit(train_X, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0041976",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_predictions = model.predict(val_X)\n",
+    "accuracy = accuracy_score(val_y, val_predictions)\n",
+    "print(f\"Validation Accuracy: {accuracy:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fd66d83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cm = confusion_matrix(val_y, val_predictions)\n",
+    "precision = precision_score(val_y, val_predictions)\n",
+    "recall = recall_score(val_y, val_predictions)\n",
+    "\n",
+    "print(\"Confusion Matrix:\\n\", cm)\n",
+    "print(f\"Precision: {precision:.3f}\")\n",
+    "print(f\"Recall: {recall:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7da8375e",
+   "metadata": {},
+   "source": [
+    "## Day 5 Results – Titanic Classification\n",
+    "\n",
+    "- **Model:** DecisionTreeClassifier\n",
+    "- **Validation Accuracy:** 80.3%\n",
+    "- **Confusion Matrix:**\n",
+    "\n",
+    "| Actual \\ Predicted | 0 (Did Not Survive) | 1 (Survived) |\n",
+    "|--------------------|---------------------|--------------|\n",
+    "| **0 (Did Not Survive)** | 113                 | 25           |\n",
+    "| **1 (Survived)**         | 19                  | 66           |\n",
+    "\n",
+    "- **Precision:** 72.5% – Of the predicted survivors, 72.5% actually survived.\n",
+    "- **Recall:** 77.6% – The model correctly identified 77.6% of the actual survivors.\n",
+    "\n",
+    "### Interpretation\n",
+    "\n",
+    "- The model performs reasonably well out of the box.\n",
+    "- Slight bias toward predicting non-survivors (class 0), but catches most real survivors.\n",
+    "- Future improvements could include:\n",
+    "  - Trying a `max_depth` limit to reduce overfitting.\n",
+    "  - Testing a RandomForestClassifier for better generalization.\n",
+    "  - Exploring class imbalance solutions (e.g. balanced weights)."
    ]
   }
  ],
