Polished Titanic notebook: structured, commented, added evaluation visuals

--- a/block3_intro_to_ml/classification_titanic.ipynb
+++ b/block3_intro_to_ml/classification_titanic.ipynb
@@ -5,13 +5,9 @@
    "id": "c0908e18",
    "metadata": {},
    "source": [
-    "# Titanic Survival Classification – Data Preparation\n",
+    "# Titanic Classification\n",
     "\n",
-    "## 1. Setup and Data Load\n",
-    "## 2. Initial Exploration\n",
-    "## 3. Preprocessing\n",
-    "## 4. Feature and Target Selection\n",
-    "## 5. Save Cleaned Data (Optional)"
+    "## 1. Loading Data  "
    ]
   },
   {
@@ -26,6 +22,14 @@
     "# Load Titanic dataset\n",
     "file_path = 'data/titanic.csv'  # adjust if needed\n",
     "titanic_data = pd.read_csv(file_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad4da7e4",
+   "metadata": {},
+   "source": [
+    "## 2. Exploratory Data Analysis  "
    ]
   },
   {
@@ -82,6 +86,14 @@
     "# Encode 'Sex' and 'Embarked'\n",
     "titanic_data['Sex'] = titanic_data['Sex'].map({'male': 0, 'female': 1})\n",
     "titanic_data['Embarked'] = titanic_data['Embarked'].map({'S': 0, 'C': 1, 'Q': 2})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7f22046",
+   "metadata": {},
+   "source": [
+    "## 3. Feature Engineering  "
    ]
   },
   {
