--- a/block5_mini_project/notebooks/day3_eda.ipynb
+++ b/block5_mini_project/notebooks/day3_eda.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "a3b94048",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
          "type": "boolean"
         }
        ],
-       "ref": "1126cceb-a018-4b70-ad87-429ceb9cc22b",
+       "ref": "3c660637-ffd8-4444-a1bd-b0b4f91de407",
        "rows": [
         [
          "0",
@@ -819,7 +819,7 @@
        "[5 rows x 51 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "f66af3c7",
    "metadata": {},
    "outputs": [],
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "2328baff",
    "metadata": {},
    "outputs": [
@@ -942,7 +942,7 @@
          "type": "float"
         }
        ],
-       "ref": "eac0b589-c7cf-4643-aa67-dbb8b57902c6",
+       "ref": "aaa221c8-e46b-41be-b5ef-a43ea86d15ac",
        "rows": [
         [
          "age",
@@ -1734,7 +1734,7 @@
        "vitamin_d_ng_ml           22.000000   28.060   53.10  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1785,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "9ed6ceea",
    "metadata": {},
    "outputs": [
@@ -1816,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "f5e3b4c3",
    "metadata": {},
    "outputs": [
@@ -1832,6 +1832,11 @@
     }
    ],
    "source": [
+    "import os\n",
+    "\n",
+    "# Ensure the plot folder exists\n",
+    "os.makedirs(\"../plots\", exist_ok=True)\n",
+    "\n",
     "# Plot bar chart of class distribution\n",
     "target_counts.plot(kind=\"bar\", color=[\"salmon\", \"skyblue\"])\n",
     "plt.title(\"Target Distribution: Gallstone Presence\")\n",
@@ -1840,6 +1845,10 @@
     "plt.xticks(rotation=0)\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
+    "\n",
+    " # Save to plots directory\n",
+    "filename = f\"../plots/target_distribution.png\"\n",
+    "plt.savefig(filename)\n",
     "plt.show()"
    ]
   },
@@ -1878,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "0c4bc90d",
    "metadata": {},
    "outputs": [
@@ -2299,7 +2308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "c51ae1a8",
    "metadata": {},
    "outputs": [
@@ -2733,7 +2742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "1c9c4740",
    "metadata": {},
    "outputs": [
@@ -2770,7 +2779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "3b40daa4",
    "metadata": {},
    "outputs": [
@@ -2799,7 +2808,7 @@
          "type": "float"
         }
        ],
-       "ref": "8d34f8dc-bbcf-466c-b4e9-a64951eed4a9",
+       "ref": "e3284308-1e5e-4fe8-8dc3-4a4f45123882",
        "rows": [
         [
          "171",
@@ -3035,7 +3044,7 @@
        "212        fat_ratio_percent        lean_mass_percent    -0.994055"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3134,7 +3143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "id": "5a16f8ce",
    "metadata": {},
    "outputs": [
@@ -3143,6 +3152,7 @@
      "output_type": "stream",
      "text": [
       "Files in /plots/:\n",
+      ".DS_Store\n",
       "boxplot_age.png\n",
       "boxplot_alp_u_l.png\n",
       "boxplot_alt_u_l.png\n",
@@ -3174,6 +3184,8 @@
       "boxplot_visceral_muscle_mass_kg.png\n",
       "boxplot_vitamin_d_ng_ml.png\n",
       "boxplot_weight_kg.png\n",
+      "confusion_matrices.png\n",
+      "corr_matrix.png\n",
       "correlation_matrix.png\n",
       "hist_age.png\n",
       "hist_alp_u_l.png\n",
@@ -3205,7 +3217,14 @@
       "hist_visceral_fat_area_cm2.png\n",
       "hist_visceral_muscle_mass_kg.png\n",
       "hist_vitamin_d_ng_ml.png\n",
-      "hist_weight_kg.png\n"
+      "hist_weight_kg.png\n",
+      "logreg_feature_importance.png\n",
+      "random_forest_feature_importances.png\n",
+      "rf_feature_importances_combined.png\n",
+      "roc_curves_combined.png\n",
+      "roc_curves_inline_labels.png\n",
+      "summary\n",
+      "target_distribution.png\n"
      ]
     }
    ],
@@ -3219,7 +3238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "id": "441f5d3b",
    "metadata": {},
    "outputs": [],
