feat(model): train tabular model and save loss + RMSE plots

--- a/block7_deep_learning_tabular_data/notebooks/day4_model_training.ipynb
+++ b/block7_deep_learning_tabular_data/notebooks/day4_model_training.ipynb
@@ -346,6 +346,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee905b16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column               Type            Example\n",
+      "------------------------------------------------------------\n",
+      "Store                int64           1\n",
+      "DayOfWeek            int64           5\n",
+      "Date                 object          2015-07-31\n",
+      "Sales                int64           5263\n",
+      "Customers            int64           555\n",
+      "Open                 int64           1\n",
+      "Promo                int64           1\n",
+      "StateHoliday         object          0\n",
+      "SchoolHoliday        int64           1\n",
+      "StoreType            object          c\n",
+      "Assortment           object          a\n",
+      "CompetitionDistance  float64         1270.0\n",
+      "CompetitionOpenSinceMonth float64         9.0\n",
+      "CompetitionOpenSinceYear float64         2008.0\n",
+      "Promo2               int64           0\n",
+      "Promo2SinceWeek      float64         13.0\n",
+      "Promo2SinceYear      float64         2010.0\n",
+      "PromoInterval        object          Jan,Apr,Jul,Oct\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{'Column':<20} {'Type':<15} {'Example'}\")\n",
+    "print(\"-\" * 60)\n",
+    "for col in df.columns:\n",
+    "    dtype = df[col].dtype\n",
+    "    example = df[col].dropna().iloc[0] if df[col].notna().any() else \"NaN\"\n",
+    "    print(f\"{col:<20} {str(dtype):<15} {str(example)}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a6522d11",
    "metadata": {},
