--- a/block8_data_visualization/notebooks/day4_stakeholder_chart.ipynb
+++ b/block8_data_visualization/notebooks/day4_stakeholder_chart.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "eec4cefa",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,10 @@
     "ax.tick_params(left=False, bottom=False)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# Save to summary plots folder\n",
+    "fig.savefig(\"../plots/stakeholder_gallstone_detection.png\", dpi=300)"
    ]
   },
   {
